--- a/latex/modeles/tableau_ressource.tex
+++ b/latex/modeles/tableau_ressource.tex
@@ -57,7 +57,7 @@
 \hline
 \textcolor{ressourceC}{\bfseries \makecell[l]{Compétences / \\
 Apprentissages \\ critiques} } & %\listeACs{\CODE}
-\tableauChampLong{\listeCompetencesEtACs{\CODE}} \\
+\tableauChampLong{\listeRCompetencesEtACs{\CODE}} \\
 \hline
 \end{tabular}
 % \ifcsdef{Rcoeff\CODE A}{coef. {\csname Rcoeff\CODE A\endcsname}}{}
