--- a/python/templates/modele_sae.tex
+++ b/python/templates/modele_sae.tex
@@ -10,8 +10,15 @@
 %% Les compétences et les ACs
 #competences_et_ACs
 
-% Le description
-\ajoutSdescription{#description}
+% Les objectifs
+\ajoutSobjectifs{
+    #objectifs
+}
+
+% La description
+\ajoutSdescription{
+    #description
+}
 
 % Les ressources
 #ressources
