--- a/latex/referentiel_BUT1.tex
+++ b/latex/referentiel_BUT1.tex
@@ -6,7 +6,7 @@
 
 \nouveausemestre{} 
 
-%\input{saes/SAE11.tex}
+\input{saes/S1/SAE1.1.tex}
 %\input{saes/SAE11_exemple1.tex}
 %\input{saes/SAE11_exemple2.tex}
 %\input{saes/SAE11_exemple3.tex}
@@ -28,22 +28,8 @@
 %
 %\input{saes/SAE16.tex}
 %
-\input{ressources/R101.tex}
-%\input{ressources/R102.tex}
-%\input{ressources/R103.tex}
-%\input{ressources/R104.tex}
-%\input{ressources/R105.tex}
-%\input{ressources/R106.tex}
-%\input{ressources/R107.tex}
-%\input{ressources/R108.tex}
-%\input{ressources/R109.tex}
-%\input{ressources/R110.tex}
-%\input{ressources/R111.tex}
-%\input{ressources/R112.tex}
-%\input{ressources/R113.tex}
-%\input{ressources/R114.tex}
-%\input{ressources/R115.tex}
-%
+\input{ressources/S1/R1.01.tex}
+
 %%%%%%%%%%%%%%%%%%
 %%%% Semestre 2 %%
 %%%%%%%%%%%%%%%%%%
