--- a/latex/referentiel_S1.tex
+++ b/latex/referentiel_S1.tex
@@ -6,7 +6,9 @@
 
 % \nouveausemestre{}
 
-\subsection{Fiches SAÉs du semestre 1}
+% \subsection{Fiches SAÉs du semestre 1}
+\phantomsection \label{subsec:FichesSAES1}
+\addcontentsline{toc}{subssection}{Fiches SAÉs du semestre 1}
 
 \input{saes/S1/SAE1.1.tex} \newpage
 \input{saes/S1/SAE1.2.tex} \newpage
@@ -16,7 +18,9 @@
 \input{saes/S1/SAE1.6.tex} \newpage
 
 %% Les ressources du semestre 1
-\subsection{Fiches ressources du semestre 1}
+% \subsection{Fiches ressources du semestre 1}
+\phantomsection \label{subsec:FichesRessourcesS1}
+\addcontentsline{toc}{subssection}{Fiches ressources du semestre 1}
 
 \input{ressources/S1/R1.01.tex} \newpage
 \input{ressources/S1/R1.02.tex} \newpage
