--- a/latex/referentiel_S2.tex
+++ b/latex/referentiel_S2.tex
@@ -6,7 +6,9 @@
 
 % \nouveausemestre{}
 
-\subsection{Fiches SAÉs du semestre 2}
+%\subsection{Fiches SAÉs du semestre 2}
+\phantomsection \label{subsec:FichesSAES2}
+\addcontentsline{toc}{subssection}{Fiches SAÉs du semestre 2}
 
 \input{saes/S2/SAE2.1.tex} \newpage
 \input{saes/S2/SAE2.2.tex} \newpage
@@ -15,7 +17,9 @@
 \input{saes/S2/SAE2.5.tex} \newpage
 
 %% Les ressources du semestre 1
-\subsection{Fiches ressources du semestre 2}
+%\subsection{Fiches ressources du semestre 2}
+\phantomsection \label{subsec:FichesRessourcesS2}
+\addcontentsline{toc}{subssection}{Fiches ressources du semestre 2}
 
 \input{ressources/S2/R2.01.tex} \newpage
 \input{ressources/S2/R2.02.tex} \newpage
