--- a/latex/referentiel_S5.tex
+++ b/latex/referentiel_S5.tex
@@ -6,7 +6,9 @@
 
 % \nouveausemestre{}
 
-\subsection{Fiches SAÉs du semestre 5}
+%\subsection{Fiches SAÉs du semestre 5}
+\phantomsection \label{subsec:FichesSAES5}
+\addcontentsline{toc}{subssection}{Fiches SAÉs du semestre 5}
 
 \input{saes/S5/SAE5.1.tex} \newpage
 \input{saes/S5/SAE5.2.tex} \newpage
@@ -18,7 +20,9 @@
 \input{saes/S5/SAE5.8.tex} \newpage
 
 %% Les ressources du semestre 1
-\subsection{Fiches ressources du semestre 5}
+%\subsection{Fiches ressources du semestre 5}
+\phantomsection \label{subsec:FichesRessourcesS5}
+\addcontentsline{toc}{subssection}{Fiches ressources du semestre 5}
 
 \input{ressources/S5/R5.01.tex} \newpage
 \input{ressources/S5/R5.02.tex} \newpage
