--- a/latex/referentiel_S6.tex
+++ b/latex/referentiel_S6.tex
@@ -6,7 +6,9 @@
 
 % \nouveausemestre{}
 
-\subsection{Fiches SAÉs du semestre 6}
+%\subsection{Fiches SAÉs du semestre 6}
+\phantomsection \label{subsec:FichesSAES6}
+\addcontentsline{toc}{subssection}{Fiches SAÉs du semestre 6}
 
 \input{saes/S6/SAE6.1.tex} \newpage
 \input{saes/S6/SAE6.2.tex} \newpage
@@ -18,6 +20,8 @@
 
 %% Les ressources du semestre 6
 \subsection{Fiches ressources du semestre 6}
+\phantomsection \label{subsec:FichesRessourcesS6}
+\addcontentsline{toc}{subssection}{Fiches ressources du semestre 6}
 
 \input{ressources/S6/R6.01.tex} \newpage
 \input{ressources/S6/R6.02.tex} \newpage
