--- a/python/templates/modele_tableau_ressource.tex
+++ b/python/templates/modele_tableau_ressource.tex
@@ -1,3 +1,6 @@
+\phantomsection \label{subsubsec:#codelatex}
+\addcontentsline{toc}{subsubsection}{#codelatex}
+
 % Le tableau complet présentant une ressource
 
 \setlength{\tabcolsep}{0.125cm} % Marge des colonnes
