--- a/latex/referentiel_S3.tex
+++ b/latex/referentiel_S3.tex
@@ -6,7 +6,9 @@
 
 % \nouveausemestre{}
 
-\subsection{Fiches SAÉs du semestre 3}
+%\subsection{Fiches SAÉs du semestre 3}
+\phantomsection \label{subsec:FichesSAES3}
+\addcontentsline{toc}{subssection}{Fiches SAÉs du semestre 3}
 
 \input{saes/S3/SAE3.1.tex} \newpage
 \input{saes/S3/SAE3.2.tex} \newpage
@@ -19,7 +21,9 @@
 \input{saes/S3/SAE3.9.tex} \newpage
 
 %% Les ressources du semestre 1
-\subsection{Fiches ressources du semestre 3}
+%\subsection{Fiches ressources du semestre 3}
+\phantomsection \label{subsec:FichesRessourcesS3}
+\addcontentsline{toc}{subssection}{Fiches ressources du semestre 3}
 
 \input{ressources/S3/R3.01.tex} \newpage
 \input{ressources/S3/R3.02.tex} \newpage
