--- a/latex/referentiel_S4.tex
+++ b/latex/referentiel_S4.tex
@@ -6,7 +6,9 @@
 
 % \nouveausemestre{}
 
-\subsection{Fiches SAÉs du semestre 4}
+%\subsection{Fiches SAÉs du semestre 4}
+\phantomsection \label{subsec:FichesSAES4}
+\addcontentsline{toc}{subssection}{Fiches SAÉs du semestre 4}
 
 \input{saes/S4/SAE4.1.tex} \newpage
 \input{saes/S4/SAE4.2.tex} \newpage
@@ -17,7 +19,9 @@
 \input{saes/S4/SAE4.7.tex} \newpage
 
 %% Les ressources du semestre 1
-\subsection{Fiches ressources du semestre 4}
+%\subsection{Fiches ressources du semestre 4}
+\phantomsection \label{subsec:FichesRessourcesS4}
+\addcontentsline{toc}{subssection}{Fiches ressources du semestre 4}
 
 \input{ressources/S4/R4.01.tex} \newpage
 \input{ressources/S4/R4.02.tex} \newpage
