Améliore la détection du contexte

--- a/latex/modeles/tableau.tex
+++ b/latex/modeles/tableau.tex
@@ -4,6 +4,7 @@
 
 % Pour la colonne d'entete
 \newcolumntype{P}{>{}m{3.6cm}<{}}
+\newcolumntype{N}{>{}m{3.4cm}<{}}
 
 %% Pour les champs horaires (lorsqu'il y en a 2)
 \newcolumntype{Q}{>{}m{4.6cm}<{}}  % En 3 (4.1 pour équiréparti)
@@ -17,7 +18,8 @@
 %% Pour les champs de description (2de colonne)
 \newcolumntype{T}{>{}p{13.325cm}<{}} % 12.825cm
 
-
+\newcolumntype{U}{>{}p{1.4cm}<{}} % 12.825cm <- sous-colone de T
+\newcolumntype{W}{>{}p{11.4cm}<{}} % 12.825cm
 
 \newcolumntype{V}{>{}p{8.45cm}<{}} % 12.825cm
 
