--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -166,13 +166,14 @@ ACD R\&T
 
 \vskip 2cm
 \begin{boitepagetitre}
-Document de travail formulant les propositions de l'ACD R\&T pour l'ensemble de la formation pour les deux premiers semestres (S1 et S2) de l'année universitaire 2021-2022.
+Document de travail formulant les propositions de l'ACD R\&T pour l'ensemble de la formation BUT RT.
 \medskip
 
-Élaboré par les enseignants des départements Réseaux et Télécommunications, sous la direction du groupe de travail constitué de~:
-{\em Cléo Baras, Jean-Jacques Bascou,\\
-Christine Bolou-Chiaravalli, Anne-Sophie Capelle, Michel Gautero, Denis\\Genon-Catalot, Willy Guillemin, Said Hoceini, Fabrice Peyrard, Marie-Bernadette Piel} \\
-et {\em Emmanuel Viennet} (Président de l'ACD).
+Élaboré par les enseignants des départements Réseaux et Télécommunications
+%, sous la direction du groupe de travail constitué de~:
+%{\em Cléo Baras, Jean-Jacques Bascou,\\
+%Christine Bolou-Chiaravalli, Anne-Sophie Capelle, Michel Gautero, Denis\\Genon-Catalot, Willy Guillemin, Said Hoceini, Fabrice Peyrard, Marie-Bernadette Piel, Emmanuel Viennet} \\
+% et {\em Frédéric Drouhin} (Président de l'ACD).
 \end{boitepagetitre}
 
 \end{center}
@@ -232,7 +233,6 @@ et {\em Emmanuel Viennet} (Président de l'ACD).
 \arrayrulecolor{black}
 
 \section{Semestre 1}
-\def\sem{A}
 
 \subsection{SAÉs du semestre 1}
 \input{synthese/liste_saes_S1.tex}
@@ -257,8 +257,7 @@ et {\em Emmanuel Viennet} (Président de l'ACD).
 %%%%%%%%%%%%%%%%%
 \arrayrulecolor{black}
 \section{Semestre 2}
-\def\sem{B} % Le semestre 2
-%
+
 \subsection{SAÉs du semestre 2}
 \input{synthese/liste_saes_S2.tex}
 
@@ -281,7 +280,6 @@ et {\em Emmanuel Viennet} (Président de l'ACD).
 %%%%%%%%%%%%%%%%%
 \arrayrulecolor{black}
 \section{Semestre 3}
-\def\sem{C} % Le semestre 3
 
 \subsection{SAÉs du semestre 3}
 \input{synthese/liste_saes_S3.tex}
