--- a/python/templates/modele_tableau_ressource.tex
+++ b/python/templates/modele_tableau_ressource.tex
@@ -12,7 +12,7 @@
 \begin{tabular}[t]{|P|T|}
 \hline % 1ère ligne : code & titre
 	\cellcolor{ressourceC} \textcolor{compCAp!20!white}{\bfseries \hypertarget{#codelatex}{#code}}
-    & \cellcolor{ressourceC} \textcolor{compCAp!20!white}{\bfseries #nom (#codeRT)}
+    & \cellcolor{ressourceC} \textcolor{compCAp!20!white}{\bfseries #codeRT : #nom }
 \\
 \end{tabular}
 
@@ -49,6 +49,7 @@
 	\hline
     #contenu
 	\\
+    \hline
 \end{tabular}
 
 % 2ème tableau : Compétences et apprentissages critiques
