--- a/python/templates/modele_tableau_sae.tex
+++ b/python/templates/modele_tableau_sae.tex
@@ -13,7 +13,7 @@
 \begin{tabular}[t]{|P|T|}
 \hline % 1ère ligne : code & titre
 	\cellcolor{saeC} \textcolor{compCAp!20!white}{\bfseries \hypertarget{#codelatex}{#code}}
-    & \cellcolor{saeC} \textcolor{compCAp!20!white}{\bfseries #nom (#codeRT)}
+    & \cellcolor{saeC} \textcolor{compCAp!20!white}{\bfseries #codeRT : #nom}
 \\
 \end{tabular}
 
@@ -51,7 +51,8 @@
 	\hline
     #description
 	\\
-    #livrables
+    #livrables \\
+\hline
 \end{tabular}
 
 % 2ème tableau : Compétences et apprentissages critiques
