--- a/latex/referentiel_S2.tex
+++ b/latex/referentiel_S2.tex
@@ -8,7 +8,8 @@
 
 %\subsection{Fiches SAÉs du semestre 2}
 \phantomsection \label{subsec:FichesSAES2}
-\addcontentsline{toc}{subssection}{Fiches SAÉs du semestre 2}
+\addtocounter{subsection}{1}
+\addcontentsline{toc}{subsection}{\arabic{section}.\arabic{subsection}~~~ Fiches SAÉs du semestre 2}
 
 \input{saes/S2/SAE2.1.tex} \newpage
 \input{saes/S2/SAE2.2.tex} \newpage
@@ -19,7 +20,8 @@
 %% Les ressources du semestre 1
 %\subsection{Fiches ressources du semestre 2}
 \phantomsection \label{subsec:FichesRessourcesS2}
-\addcontentsline{toc}{subssection}{Fiches ressources du semestre 2}
+\addtocounter{subsection}{1}
+\addcontentsline{toc}{subsection}{\arabic{section}.\arabic{subsection}~~~ Fiches ressources du semestre 2}
 
 \input{ressources/S2/R2.01.tex} \newpage
 \input{ressources/S2/R2.02.tex} \newpage
