--- a/latex/referentiel_S3.tex
+++ b/latex/referentiel_S3.tex
@@ -8,7 +8,8 @@
 
 %\subsection{Fiches SAÉs du semestre 3}
 \phantomsection \label{subsec:FichesSAES3}
-\addcontentsline{toc}{subssection}{Fiches SAÉs du semestre 3}
+\addtocounter{subsection}{1}
+\addcontentsline{toc}{subsection}{\arabic{section}.\arabic{subsection}~~~ Fiches SAÉs du semestre 3}
 
 \input{saes/S3/SAE3.1.tex} \newpage
 \input{saes/S3/SAE3.2.tex} \newpage
@@ -23,7 +24,8 @@
 %% Les ressources du semestre 1
 %\subsection{Fiches ressources du semestre 3}
 \phantomsection \label{subsec:FichesRessourcesS3}
-\addcontentsline{toc}{subssection}{Fiches ressources du semestre 3}
+\addtocounter{subsection}{1}
+\addcontentsline{toc}{subsection}{\arabic{section}.\arabic{subsection}~~~ Fiches ressources du semestre 3}
 
 \input{ressources/S3/R3.01.tex} \newpage
 \input{ressources/S3/R3.02.tex} \newpage
