--- a/latex/referentiel_S4.tex
+++ b/latex/referentiel_S4.tex
@@ -8,7 +8,8 @@
 
 %\subsection{Fiches SAÉs du semestre 4}
 \phantomsection \label{subsec:FichesSAES4}
-\addcontentsline{toc}{subssection}{Fiches SAÉs du semestre 4}
+\addtocounter{subsection}{1}
+\addcontentsline{toc}{subsection}{\arabic{section}.\arabic{subsection}~~~ Fiches SAÉs du semestre 4}
 
 \input{saes/S4/SAE4.1.tex} \newpage
 \input{saes/S4/SAE4.2.tex} \newpage
@@ -21,7 +22,8 @@
 %% Les ressources du semestre 1
 %\subsection{Fiches ressources du semestre 4}
 \phantomsection \label{subsec:FichesRessourcesS4}
-\addcontentsline{toc}{subssection}{Fiches ressources du semestre 4}
+\addtocounter{subsection}{1}
+\addcontentsline{toc}{subsection}{\arabic{section}.\arabic{subsection}~~~ Fiches ressources du semestre 4}
 
 \input{ressources/S4/R4.01.tex} \newpage
 \input{ressources/S4/R4.02.tex} \newpage
