--- a/latex/referentiel_S5.tex
+++ b/latex/referentiel_S5.tex
@@ -8,7 +8,8 @@
 
 %\subsection{Fiches SAÉs du semestre 5}
 \phantomsection \label{subsec:FichesSAES5}
-\addcontentsline{toc}{subssection}{Fiches SAÉs du semestre 5}
+\addtocounter{subsection}{1}
+\addcontentsline{toc}{subsection}{\arabic{section}.\arabic{subsection}~~~ Fiches SAÉs du semestre 5}
 
 \input{saes/S5/SAE5.1.tex} \newpage
 \input{saes/S5/SAE5.2.tex} \newpage
@@ -22,7 +23,8 @@
 %% Les ressources du semestre 1
 %\subsection{Fiches ressources du semestre 5}
 \phantomsection \label{subsec:FichesRessourcesS5}
-\addcontentsline{toc}{subssection}{Fiches ressources du semestre 5}
+\addtocounter{subsection}{1}
+\addcontentsline{toc}{subsection}{\arabic{section}.\arabic{subsection}~~~ Fiches ressources du semestre 5}
 
 \input{ressources/S5/R5.01.tex} \newpage
 \input{ressources/S5/R5.02.tex} \newpage
@@ -41,6 +43,7 @@
 \input{ressources/S5/R5.18.tex} \newpage
 \input{ressources/S5/R5.19.tex} \newpage
 \input{ressources/S5/R5.20.tex} \newpage
+\input{ressources/S5/R5.21.tex} \newpage
 \input{ressources/S5/R5.22.tex} \newpage
 \input{ressources/S5/R5.23.tex} \newpage
 \input{ressources/S5/R5.24.tex} \newpage
