--- a/latex/referentiel_S6.tex
+++ b/latex/referentiel_S6.tex
@@ -8,7 +8,8 @@
 
 %\subsection{Fiches SAÉs du semestre 6}
 \phantomsection \label{subsec:FichesSAES6}
-\addcontentsline{toc}{subssection}{Fiches SAÉs du semestre 6}
+\addtocounter{subsection}{1}
+\addcontentsline{toc}{subsection}{\arabic{section}.\arabic{subsection}~~~ Fiches SAÉs du semestre 6}
 
 \input{saes/S6/SAE6.1.tex} \newpage
 \input{saes/S6/SAE6.2.tex} \newpage
@@ -19,9 +20,10 @@
 \input{saes/S6/SAE6.7.tex} \newpage
 
 %% Les ressources du semestre 6
-\subsection{Fiches ressources du semestre 6}
+% \subsection{Fiches ressources du semestre 6}
 \phantomsection \label{subsec:FichesRessourcesS6}
-\addcontentsline{toc}{subssection}{Fiches ressources du semestre 6}
+\addtocounter{subsection}{1}
+\addcontentsline{toc}{subsection}{\arabic{section}.\arabic{subsection}~~~ Fiches ressources du semestre 6}
 
 \input{ressources/S6/R6.01.tex} \newpage
 \input{ressources/S6/R6.02.tex} \newpage
