Amélioration du latex

--- a/latex/pn_formation.tex
+++ b/latex/pn_formation.tex
@@ -231,112 +231,38 @@ Document de travail formulant les propositions de l'ACD R\&T pour l'ensemble de 
 %%% SEMESTRE 1 %%
 %%%%%%%%%%%%%%%%%
 \arrayrulecolor{black}
-
-\section{Semestre 1}
-
-\subsection{SAÉs du semestre 1}
-\input{synthese/liste_saes_S1.tex}
-
-
-\subsection{Ressources du semestre 1}
-\input{synthese/liste_ressources_S1.tex}
-
-%\subsection{Matrice Compétences/SAÉs-Ressources du semestre 1}
-%
-%\scalebox{0.95}{\input{synthese/S1_acs_vs_saes_ressources.tex}}
-%
-%\subsection{Volumes horaires, coefficients et ECTS du semestre 1}
-%
-%\input{synthese/S1_coeffs_saes_ressources.tex}
-%
-\newpage
-\input{referentiel_S1.tex}
+\input{synthese/referentiel_S1.tex}
 
 %%%%%%%%%%%%%%%%%
 %%% SEMESTRE 2 %%
 %%%%%%%%%%%%%%%%%
 \arrayrulecolor{black}
-\section{Semestre 2}
+\input{synthese/referentiel_S2.tex}
 
-\subsection{SAÉs du semestre 2}
-\input{synthese/liste_saes_S2.tex}
-
-\subsection{Ressources du semestre 2}
-\input{synthese/liste_ressources_S2.tex}
-
-%\subsection{Matrice Compétences/SAÉs-Ressources du semestre 2}
-%
-%\scalebox{0.95}{\input{synthese/S2_acs_vs_saes_ressources.tex}}
-%
-%\subsection{Volumes horaires, coefficients et ECTS du semestre 2}
-%
-%\input{synthese/S2_coeffs_saes_ressources.tex}
-%
-\newpage
-\input{referentiel_S2.tex}
 
 %%%%%%%%%%%%%%%%%
 %%% SEMESTRE 3 %%
 %%%%%%%%%%%%%%%%%
 \arrayrulecolor{black}
-\section{Semestre 3}
-
-\subsection{SAÉs du semestre 3}
-\input{synthese/liste_saes_S3.tex}
-%
-\subsection{Ressources du semestre 3}
-\input{synthese/liste_ressources_S3.tex}
-
-\newpage
-\input{referentiel_S3.tex}
+\input{synthese/referentiel_S3.tex}
 
 %%%%%%%%%%%%%%%%%
 %%% SEMESTRE 4 %%
 %%%%%%%%%%%%%%%%%
 \arrayrulecolor{black}
-\section{Semestre 4}
-\def\sem{D} % Le semestre 4
-
-\subsection{SAÉs du semestre 4}
-\input{synthese/liste_saes_S4.tex}
-
-\subsection{Ressources du semestre 4}
-\input{synthese/liste_ressources_S4.tex}
-
-\newpage
-\input{referentiel_S4.tex}
+\input{synthese/referentiel_S4.tex}
 
 %%%%%%%%%%%%%%%%%
 %%% SEMESTRE 5 %%
 %%%%%%%%%%%%%%%%%
 \arrayrulecolor{black}
-\section{Semestre 5}
-\def\sem{E} % Le semestre 3
-
-\subsection{SAÉs du semestre 5}
-\input{synthese/liste_saes_S5.tex}
-
-\subsection{Ressources du semestre 5}
-\input{synthese/liste_ressources_S5.tex}
-
-\newpage
-\input{referentiel_S5.tex}
+\input{synthese/referentiel_S5.tex}
 
 %%%%%%%%%%%%%%%%%
 %%% SEMESTRE 6 %%
 %%%%%%%%%%%%%%%%%
 \arrayrulecolor{black}
-\section{Semestre 6}
-\def\sem{F} % Le semestre 3
-
-\subsection{SAÉs du semestre 6}
-\input{synthese/liste_saes_S6.tex}
-
-\subsection{Ressources du semestre 6}
-\input{synthese/liste_ressources_S6.tex}
-
-\newpage
-\input{referentiel_S6.tex}
+\input{synthese/referentiel_S6.tex}
 
 %%%%%%%%%%%%%%%%%%%%
 %%% ABBREVIATIONS %%
