--- a/latex/synthese/S1_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S1_acs_vs_saes_ressources.tex
@@ -2,143 +2,149 @@
 \hline 
  & & \multicolumn{6}{c|}{\textcolor{saeC}{\bfseries SAÉs}}
  & \multicolumn{15}{c|}{\textcolor{ressourceC}{\bfseries Ressources}}\\ 
-\cline{3-23} & & \rotatebox[origin=l]{90}{\tiny{Se sensibiliser à l'hygiène informatique et à la cybersécurité~}}
- & \rotatebox[origin=l]{90}{\tiny{S'initier aux réseaux informatiques~}}
- & \rotatebox[origin=l]{90}{\tiny{Découvrir un dispositif de transmission~}}
- & \rotatebox[origin=l]{90}{\tiny{Se présenter sur Internet~}}
- & \rotatebox[origin=l]{90}{\tiny{Traiter des données~}}
- & \rotatebox[origin=l]{90}{\tiny{Portfolio~}}
+\cline{3-23} & & \rotatebox[origin=l]{90}{\tiny{Se sensibiliser à l'hygiène informatique et à la cybersécurité}}
+ & \rotatebox[origin=l]{90}{\tiny{S'initier aux réseaux informatiques}}
+ & \rotatebox[origin=l]{90}{\tiny{Découvrir un dispositif de transmission}}
+ & \rotatebox[origin=l]{90}{\tiny{Se présenter sur Internet}}
+ & \rotatebox[origin=l]{90}{\tiny{Traiter des données}}
+ & \rotatebox[origin=l]{90}{\tiny{Portfolio}}
 
- & \rotatebox[origin=l]{90}{\tiny{Initiation aux réseaux informatiques~}}
- & \rotatebox[origin=l]{90}{\tiny{Principes et architecture des réseaux~}}
- & \rotatebox[origin=l]{90}{\tiny{Réseaux locaux et équipements actifs~}}
- & \rotatebox[origin=l]{90}{\tiny{Fondamentaux des systèmes électroniques~}}
- & \rotatebox[origin=l]{90}{\tiny{Supports de transmission pour les réseaux locaux~}}
- & \rotatebox[origin=l]{90}{\tiny{Architecture des systèmes numériques et informatiques~}}
- & \rotatebox[origin=l]{90}{\tiny{Fondamentaux de la programmation~}}
- & \rotatebox[origin=l]{90}{\tiny{Bases des systèmes d'exploitation~}}
- & \rotatebox[origin=l]{90}{\tiny{Introduction aux technologies Web~}}
- & \rotatebox[origin=l]{90}{\tiny{Anglais de communication et initiation au vocabulaire technique~}}
- & \rotatebox[origin=l]{90}{\tiny{Expression-Culture-Communication Professionnelles 1~}}
- & \rotatebox[origin=l]{90}{\tiny{Projet Personnel et Professionnel~}}
- & \rotatebox[origin=l]{90}{\tiny{Mathématiques du signal~}}
- & \rotatebox[origin=l]{90}{\tiny{Mathématiques des transmissions~}}
- & \rotatebox[origin=l]{90}{\tiny{Gestion de projet~}}
+ & \rotatebox[origin=l]{90}{\tiny{Initiation aux réseaux informatiques}}
+ & \rotatebox[origin=l]{90}{\tiny{Principes et architecture des réseaux}}
+ & \rotatebox[origin=l]{90}{\tiny{Réseaux locaux et équipements actifs}}
+ & \rotatebox[origin=l]{90}{\tiny{Fondamentaux des systèmes électroniques}}
+ & \rotatebox[origin=l]{90}{\tiny{Supports de transmission pour les réseaux}}
+ & \rotatebox[origin=l]{90}{\tiny{Architecture des systèmes numériques et informatiques}}
+ & \rotatebox[origin=l]{90}{\tiny{Fondamentaux de la programmation}}
+ & \rotatebox[origin=l]{90}{\tiny{Bases des systèmes d'exploitation}}
+ & \rotatebox[origin=l]{90}{\tiny{Introduction aux technologies Web}}
+ & \rotatebox[origin=l]{90}{\tiny{Anglais de communication et initiation au vocabulaire technique}}
+ & \rotatebox[origin=l]{90}{\tiny{Expression-Culture-Communication Professionnelles (ECC1)}}
+ & \rotatebox[origin=l]{90}{\tiny{Projet Personnel et Professionnel}}
+ & \rotatebox[origin=l]{90}{\tiny{Mathématiques du signal}}
+ & \rotatebox[origin=l]{90}{\tiny{Mathématiques des transmissions}}
+ & \rotatebox[origin=l]{90}{\tiny{Gestion de projet}}
 
 \\ 
  & & 
-\rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ11}{\textcolor{saeC}{SAÉ11}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ12}{\textcolor{saeC}{SAÉ12}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ13}{\textcolor{saeC}{SAÉ13}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ14}{\textcolor{saeC}{SAÉ14}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ15}{\textcolor{saeC}{SAÉ15}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{sae:SAÉ16}{\textcolor{saeC}{SAÉ16}}}
+\rotatebox[origin=r]{90}{~\hyperlink{SAE11}{\textcolor{saeC}{SAÉ1.1}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{SAE12}{\textcolor{saeC}{SAÉ1.2}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{SAE13}{\textcolor{saeC}{SAÉ1.3}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{SAE14}{\textcolor{saeC}{SAÉ1.4}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{SAE15}{\textcolor{saeC}{SAÉ1.5}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{SAE16}{\textcolor{saeC}{SAÉ1.6}}}
 
- & \rotatebox[origin=r]{90}{~\hyperlink{res:R101}{\textcolor{ressourceC}{R101}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{res:R102}{\textcolor{ressourceC}{R102}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{res:R103}{\textcolor{ressourceC}{R103}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{res:R104}{\textcolor{ressourceC}{R104}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{res:R105}{\textcolor{ressourceC}{R105}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{res:R106}{\textcolor{ressourceC}{R106}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{res:R107}{\textcolor{ressourceC}{R107}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{res:R108}{\textcolor{ressourceC}{R108}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{res:R109}{\textcolor{ressourceC}{R109}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{res:R110}{\textcolor{ressourceC}{R110}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{res:R111}{\textcolor{ressourceC}{R111}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{res:R112}{\textcolor{ressourceC}{R112}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{res:R113}{\textcolor{ressourceC}{R113}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{res:R114}{\textcolor{ressourceC}{R114}}}
- & \rotatebox[origin=r]{90}{~\hyperlink{res:R115}{\textcolor{ressourceC}{R115}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{R101}{\textcolor{ressourceC}{R1.01}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{R102}{\textcolor{ressourceC}{R1.02}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{R103}{\textcolor{ressourceC}{R1.03}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{R104}{\textcolor{ressourceC}{R1.04}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{R105}{\textcolor{ressourceC}{R1.05}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{R106}{\textcolor{ressourceC}{R1.06}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{R107}{\textcolor{ressourceC}{R1.07}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{R108}{\textcolor{ressourceC}{R1.08}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{R109}{\textcolor{ressourceC}{R1.09}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{R110}{\textcolor{ressourceC}{R1.10}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{R111}{\textcolor{ressourceC}{R1.11}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{R112}{\textcolor{ressourceC}{R1.12}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{R113}{\textcolor{ressourceC}{R1.13}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{R114}{\textcolor{ressourceC}{R1.14}}}
+ & \rotatebox[origin=r]{90}{~\hyperlink{R115}{\textcolor{ressourceC}{R1.15}}}
 
 \\ 
 \hline 
-\multicolumn{23}{|l|}{\hyperlink{comp:RT1}{\textcolor{compCA}{\bfseries RT1 - Administrer les réseaux et l'Internet }}} \\\multicolumn{23}{|l|}{\small Niveau 1 - Assister l'administrateur du réseau} \\\hline 
-\textcolor{compCA}{AC0111} & 
-\begin{tabular}{p{3.8cm}} \tiny{Maîtriser les lois fondamentales de l'électricité afin d'intervenir sur des équipements de réseaux et télécommunications}\end{tabular} & 
+\multicolumn{23}{|l|}{\hyperlink{RT1}{\textcolor{compCA}{\bfseries RT1 - Administrer les réseaux et l'Internet }}} \\ 
+\multicolumn{23}{|l|}{\small Niveau 1 - Assister l'administrateur du réseau} \\ 
+\hline 
+\textcolor{compCA}{AC11.01} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{Maîtriser les lois fondamentales de l’électricité afin d’intervenir sur des équipements de réseaux et télécommunications}}\end{tabular} & 
  & $\times$ &  &  &  & $\times$
  &  &  &  & $\times$ &  &  &  &  &  &  &  &  & $\times$ & $\times$ & \\ 
 \hline 
-\textcolor{compCA}{AC0112} & 
-\begin{tabular}{p{3.8cm}} \tiny{Comprendre l'architecture des systèmes numériques et les principes du codage de l'information}\end{tabular} & 
+\textcolor{compCA}{AC11.02} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{Comprendre l'architecture et les fondements des systèmes numériques, les principes du codage de l'information, des communications et de l'Internet}}\end{tabular} & 
 $\times$ & $\times$ &  &  &  & $\times$
- &  &  &  &  &  & $\times$ &  &  &  &  &  & $\times$ &  &  & \\ 
+ &  &  &  &  &  & $\times$ &  &  &  & $\times$ &  & $\times$ &  &  & \\ 
 \hline 
-\textcolor{compCA}{AC0113} & 
-\begin{tabular}{p{3.8cm}} \tiny{Configurer les fonctions de base du réseau local}\end{tabular} & 
+\textcolor{compCA}{AC11.03} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{Configurer les fonctions de base du réseau local}}\end{tabular} & 
  & $\times$ &  &  &  & $\times$
  & $\times$ &  & $\times$ &  &  &  &  &  &  &  &  &  &  &  & \\ 
 \hline 
-\textcolor{compCA}{AC0114} & 
-\begin{tabular}{p{3.8cm}} \tiny{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et administration des réseaux et services fournis}\end{tabular} & 
+\textcolor{compCA}{AC11.04} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{Maîtriser les rôles et les principes fondamentaux des systèmes d'exploitation afin d'interagir avec ceux-ci pour la configuration et l'administration des réseaux et services fournis}}\end{tabular} & 
 $\times$ & $\times$ &  &  &  & $\times$
- &  & $\times$ &  &  &  &  &  & $\times$ &  &  &  &  &  &  & \\ 
+ &  & $\times$ &  &  &  &  &  & $\times$ &  & $\times$ &  &  &  &  & \\ 
 \hline 
-\textcolor{compCA}{AC0115} & 
-\begin{tabular}{p{3.8cm}} \tiny{Identifier les dysfonctionnements du réseau local}\end{tabular} & 
+\textcolor{compCA}{AC11.05} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{Identifier les dysfonctionnements du réseau local et savoir les signaler}}\end{tabular} & 
 $\times$ & $\times$ &  &  &  & $\times$
- & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ &  &  &  &  & \\ 
+ & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ & $\times$ &  &  &  & \\ 
 \hline 
-\textcolor{compCA}{AC0116} & 
-\begin{tabular}{p{3.8cm}} \tiny{Installer un poste client}\end{tabular} & 
+\textcolor{compCA}{AC11.06} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{Installer un poste client, expliquer la procédure mise en place}}\end{tabular} & 
  & $\times$ &  &  &  & $\times$
  & $\times$ &  & $\times$ &  &  &  &  & $\times$ &  &  & $\times$ &  &  &  & \\ 
 \hline 
 \hline 
-\multicolumn{23}{|l|}{\hyperlink{comp:RT2}{\textcolor{compCB}{\bfseries RT2 - Connecter les entreprises et les usagers }}} \\\multicolumn{23}{|l|}{\small Niveau 1 - Découvrir les transmissions et la ToIP} \\\hline 
-\textcolor{compCB}{AC0211} & 
-\begin{tabular}{p{3.8cm}} \tiny{Mesurer et analyser les signaux}\end{tabular} & 
+\multicolumn{23}{|l|}{\hyperlink{RT2}{\textcolor{compCB}{\bfseries RT2 - Connecter les entreprises et les usagers }}} \\ 
+\multicolumn{23}{|l|}{\small Niveau 1 - Découvrir les transmissions et la ToIP} \\ 
+\hline 
+\textcolor{compCB}{AC12.01} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{Mesurer et analyser les signaux}}\end{tabular} & 
  &  & $\times$ &  &  & $\times$
  &  &  &  & $\times$ & $\times$ &  &  &  &  &  &  &  & $\times$ & $\times$ & \\ 
 \hline 
-\textcolor{compCB}{AC0212} & 
-\begin{tabular}{p{3.8cm}} \tiny{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}\end{tabular} & 
- &  &  &  &  & $\times$
+\textcolor{compCB}{AC12.02} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{Caractériser des systèmes de transmissions élémentaires et découvrir la modélisation mathématique de leur fonctionnement}}\end{tabular} & 
+ &  &  &  &  & 
  &  &  &  &  &  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ & \\ 
 \hline 
-\textcolor{compCB}{AC0213} & 
-\begin{tabular}{p{3.8cm}} \tiny{Déployer des supports de transmission}\end{tabular} & 
+\textcolor{compCB}{AC12.03} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{Déployer des supports de transmission}}\end{tabular} & 
  &  & $\times$ &  &  & $\times$
- & $\times$ &  & $\times$ &  & $\times$ &  &  &  &  &  &  &  &  &  & \\ 
+ & $\times$ &  & $\times$ &  & $\times$ &  &  &  &  & $\times$ & $\times$ &  &  &  & \\ 
 \hline 
-\textcolor{compCB}{AC0214} & 
-\begin{tabular}{p{3.8cm}} \tiny{Connecter les systèmes de ToIP}\end{tabular} & 
- &  &  &  &  & $\times$
- &  &  &  &  &  &  &  &  &  &  &  &  &  &  & \\ 
+\textcolor{compCB}{AC12.04} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{Connecter les systèmes de ToIP}}\end{tabular} & 
+ &  &  &  &  & 
+ &  &  &  &  &  &  &  &  &  & $\times$ & $\times$ &  &  &  & \\ 
 \hline 
-\textcolor{compCB}{AC0215} & 
-\begin{tabular}{p{3.8cm}} \tiny{Communiquer avec un client ou un collaborateur}\end{tabular} & 
+\textcolor{compCB}{AC12.05} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{Communiquer avec un tiers (client, collaborateur...) et adapter son discours et sa langue à son interlocuteur}}\end{tabular} & 
  &  & $\times$ &  &  & $\times$
  &  &  &  &  &  &  &  &  &  & $\times$ & $\times$ &  &  &  & $\times$\\ 
 \hline 
 \hline 
-\multicolumn{23}{|l|}{\hyperlink{comp:RT3}{\textcolor{compCC}{\bfseries RT3 - Créer des outils et applications informatiques pour les R\&T }}} \\\multicolumn{23}{|l|}{\small Niveau 1 - S'intégrer dans un service informatique} \\\hline 
-\textcolor{compCC}{AC0311} & 
-\begin{tabular}{p{3.8cm}} \tiny{Utiliser un système informatique et ses outils}\end{tabular} & 
- &  &  & $\times$ & $\times$ & $\times$
- & $\times$ &  & $\times$ &  &  & $\times$ & $\times$ & $\times$ &  &  &  & $\times$ &  &  & \\ 
+\multicolumn{23}{|l|}{\hyperlink{RT3}{\textcolor{compCC}{\bfseries RT3 - Créer des outils et applications informatiques pour les R\&T }}} \\ 
+\multicolumn{23}{|l|}{\small Niveau 1 - S'intégrer dans un service informatique} \\ 
 \hline 
-\textcolor{compCC}{AC0312} & 
-\begin{tabular}{p{3.8cm}} \tiny{Lire, exécuter, corriger et modifier un programme}\end{tabular} & 
+\textcolor{compCC}{AC13.01} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{Utiliser un système informatique et ses outils}}\end{tabular} & 
+ &  &  & $\times$ & $\times$ & $\times$
+ & $\times$ &  & $\times$ &  &  & $\times$ & $\times$ & $\times$ &  & $\times$ & $\times$ & $\times$ &  &  & \\ 
+\hline 
+\textcolor{compCC}{AC13.02} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{Lire, exécuter, corriger et modifier un programme}}\end{tabular} & 
  &  &  &  & $\times$ & $\times$
  &  &  &  &  &  &  & $\times$ & $\times$ &  &  &  &  &  &  & \\ 
 \hline 
-\textcolor{compCC}{AC0313} & 
-\begin{tabular}{p{3.8cm}} \tiny{Traduire un algorithme, dans un langage et pour un environnement donné}\end{tabular} & 
+\textcolor{compCC}{AC13.03} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{Traduire un algorithme, dans un langage et pour un environnement donné}}\end{tabular} & 
  &  &  &  & $\times$ & $\times$
  &  &  &  &  &  &  & $\times$ &  &  &  &  &  &  &  & \\ 
 \hline 
-\textcolor{compCC}{AC0314} & 
-\begin{tabular}{p{3.8cm}} \tiny{Connaître l'architecture et les technologies d'un site Web}\end{tabular} & 
+\textcolor{compCC}{AC13.04} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{Connaître l'architecture et les technologies d'un site Web}}\end{tabular} & 
  &  &  & $\times$ & $\times$ & $\times$
- &  &  &  &  &  &  &  &  & $\times$ &  &  &  &  &  & \\ 
+ &  &  &  &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  &  &  & \\ 
 \hline 
-\textcolor{compCC}{AC0315} & 
-\begin{tabular}{p{3.8cm}} \tiny{Choisir les mécanismes de gestion de données adaptés au développement de l'outil}\end{tabular} & 
+\textcolor{compCC}{AC13.05} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{Choisir les mécanismes de gestion de données adaptés au développement de l'outil et argumenter ses choix}}\end{tabular} & 
  &  &  &  & $\times$ & $\times$
  &  &  &  &  &  &  &  &  &  &  &  &  &  &  & \\ 
 \hline 
-\textcolor{compCC}{AC0316} & 
-\begin{tabular}{p{3.8cm}} \tiny{S'intégrer dans un environnement propice au développement et au travail collaboratif}\end{tabular} & 
+\textcolor{compCC}{AC13.06} & 
+\begin{tabular}{p{3.8cm}} \tiny{\textit{S'intégrer dans un environnement propice au développement et au travail collaboratif}}\end{tabular} & 
  &  &  &  & $\times$ & $\times$
  &  &  &  &  &  &  & $\times$ &  &  & $\times$ & $\times$ &  &  &  & $\times$\\ 
 \hline 
