Compilation avant ACD de décembre 2021

--- a/python/templates/modele_semestre.tex
+++ b/python/templates/modele_semestre.tex
@@ -15,7 +15,8 @@
 
 \subsection*{Matrice Compétences/SAÉs-Ressources du semestre #numero}
 
-\scalebox{0.95}{\input{synthese/#fichierMatriceACs}}
+#fichiersMatriceACs
+% \scalebox{0.95}{\input{synthese/fichierMatriceACs}}
 %
 %\subsection{Volumes horaires, coefficients et ECTS du semestre 1}
 %
