Améliore détection des codes SAE-Parcours-XX

--- a/latex/synthese/S1_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S1_acs_vs_saes_ressources.tex
@@ -19,7 +19,7 @@
  & \rotatebox[origin=l]{90}{\tiny{Bases des systèmes d'exploitation}}
  & \rotatebox[origin=l]{90}{\tiny{Introduction aux technologies Web}}
  & \rotatebox[origin=l]{90}{\tiny{Anglais de communication et initiation au vocabulaire technique}}
- & \rotatebox[origin=l]{90}{\tiny{Expression-Culture-Communication Professionnelles (ECC1)}}
+ & \rotatebox[origin=l]{90}{\tiny{Expression-Culture-Communication Professionnelles (ECCP 1) : Introduction à la communication et au savoir-être professionnels}}
  & \rotatebox[origin=l]{90}{\tiny{Projet Personnel et Professionnel}}
  & \rotatebox[origin=l]{90}{\tiny{Mathématiques du signal}}
  & \rotatebox[origin=l]{90}{\tiny{Mathématiques des transmissions}}
