--- a/latex/synthese/S2_acs_vs_saes_ressources.tex
+++ b/latex/synthese/S2_acs_vs_saes_ressources.tex
@@ -18,7 +18,7 @@
  & \rotatebox[origin=l]{90}{\tiny{Analyse et traitement de données structurées}}
  & \rotatebox[origin=l]{90}{\tiny{Initiation au développement Web}}
  & \rotatebox[origin=l]{90}{\tiny{Anglais de communication et développement de l'anglais technique}}
- & \rotatebox[origin=l]{90}{\tiny{Expression-Culture-Communication Professionnelles (ECC2)}}
+ & \rotatebox[origin=l]{90}{\tiny{Expression-Culture-Communication Professionnelles (ECCP 2) : Renforcement des techniques de communication}}
  & \rotatebox[origin=l]{90}{\tiny{Projet Personnel et Professionnel}}
  & \rotatebox[origin=l]{90}{\tiny{Mathématiques des systèmes numériques}}
  & \rotatebox[origin=l]{90}{\tiny{Analyse des signaux}}
@@ -74,7 +74,7 @@ $\times$ &  &  & $\times$ & $\times$
 \textcolor{compCA}{AC11.05} & 
 \begin{tabular}{p{3.8cm}} \tiny{\textit{Identifier les dysfonctionnements du réseau local et savoir les signaler}}\end{tabular} & 
 $\times$ &  &  & $\times$ & $\times$
- & $\times$ & $\times$ & $\times$ & $\times$ &  &  &  &  &  &  & $\times$ & $\times$ &  & \\ 
+ & $\times$ & $\times$ & $\times$ & $\times$ &  &  &  &  &  & $\times$ & $\times$ & $\times$ &  & \\ 
 \hline 
 \textcolor{compCA}{AC11.06} & 
 \begin{tabular}{p{3.8cm}} \tiny{\textit{Installer un poste client, expliquer la procédure mise en place}}\end{tabular} & 
