--- a/python/templates/modele_tableau_ressource.tex
+++ b/python/templates/modele_tableau_ressource.tex
@@ -16,18 +16,29 @@
 \\
 \end{tabular}
 
+\begin{tabular}[t]{|G|}
+\hline % 2ème ligne : url
+	#url
+\\
+\end{tabular}
+
 \begin{tabular}[t]{|P|T|}
 \hline % 2ème ligne : semestre
 	\textcolor{ressourceC}{\bfseries Cursus}
 	& #cursus \\
 \hline % 3ème ligne : Heures
 \hline
-    \textcolor{ressourceC}{\bfseries Heures}
+    \textcolor{ressourceC}{\bfseries Heures (fiche)}
     &
-    \textcolor{ressourceC}{\bfseries Formation encadrée publiée au PN} : {\bfseries {#heures_formation_pn}h}, dont {#heures_tp_pn}h de TP \\ % dont {#heures_cm}h de CM, {#heures_td}h de TD,
+    \textcolor{ressourceC}{\bfseries Formation encadrée préconisée par l'ACD-RT} : {\bfseries {#heures_formation}h}, dont {#heures_acd} \\
+\hline
+\hline
+    \textcolor{ressourceC}{\bfseries Heures (tableur PACD)}
+    &
+    \textcolor{ressourceC}{\bfseries Formation encadrée publiée au PN} : {\bfseries {#tableur_heures_formation_pn}h}, dont {#tableur_heures_cm_td_pn}h CM/TD, {#tableur_heures_tp_pn}h TP \\ % dont {heures_cm}h de CM, {heures_td}h de TD,
 \cline{2-2}
     &
-    \textcolor{ressourceC}{\bfseries Formation encadrée préconisée en adaptation locale} : {\bfseries {#heures_formation}h}, dont {#heures_tp}h de TP \\
+    \textcolor{ressourceC}{\bfseries Formation encadrée préconisée par l'ACD-RT} : {\bfseries {#tableur_heures_formation}h}, dont {#tableur_heures_cm_td}h CM/TD, {#tableur_heures_tp}h TP \\
 \hline
 \hline % 4ème ligne : Parcours
 	\textcolor{ressourceC}{\bfseries Parcours}
