--- a/python/templates/modele_tableau_sae.tex
+++ b/python/templates/modele_tableau_sae.tex
@@ -39,7 +39,9 @@
 \hline
     \textcolor{saeC}{\bfseries Heures (tableur PACD)}
     &
-    \textcolor{saeC}{\bfseries Formation encadrée publiée au PN} : {\bfseries {#tableur_heures_formation_pn}h}, dont {#tableur_heures_cm_td_pn}h CM/TD, {#tableur_heures_tp_pn}h TP \\ % dont {heures_cm}h de CM, {heures_td}h de TD,
+    \textcolor{saeC}{\bfseries Formation encadrée publiée au PN} : {\bfseries non publié}
+    %{tableur_heures_formation_pn}h}, dont {tableur_heures_cm_td_pn}h CM/TD, {tableur_heures_tp_pn}h TP
+    \\ % dont {heures_cm}h de CM, {heures_td}h de TD,
 \cline{2-2}
     &
     \textcolor{saeC}{\bfseries Formation encadrée préconisée par l'ACD-RT} : {\bfseries {#tableur_heures_formation}h}, dont {#tableur_heures_cm_td}h CM/TD, {#tableur_heures_tp}h TP \\
